# ChangeLog for dev-util/boost-build
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/boost-build/ChangeLog,v 1.126 2014/05/16 09:40:05 pinkbyte Exp $

  16 May 2014; Sergey Popov <pinkbyte@gentoo.org> boost-build-1.53.0.ebuild,
  boost-build-1.54.0.ebuild, boost-build-1.55.0.ebuild:
  Respect multilib during building Python-related stuff, bug #496446

  15 Apr 2014; Sergey Popov <pinkbyte@gentoo.org> -boost-build-1.49.0.ebuild,
  -files/boost-build-1.42-env-whitespace.patch:
  Drop old vulnerable version

  14 Dec 2013; Agostino Sarubbo <ago@gentoo.org> boost-build-1.52.0-r1.ebuild:
  Stable for sparc, wrt bug #455464

*boost-build-1.55.0 (14 Nov 2013)

  14 Nov 2013; Sergey Popov <pinkbyte@gentoo.org> +boost-build-1.55.0.ebuild:
  Version bump, wrt bug #491064

  26 Sep 2013; Agostino Sarubbo <ago@gentoo.org> boost-build-1.52.0-r1.ebuild:
  Stable for arm, wrt bug #455464

  22 Sep 2013; Agostino Sarubbo <ago@gentoo.org> boost-build-1.52.0-r1.ebuild:
  Stable for alpha, wrt bug #455464

  22 Sep 2013; Agostino Sarubbo <ago@gentoo.org> boost-build-1.52.0-r1.ebuild:
  Stable for ppc, wrt bug #455464

  22 Sep 2013; Agostino Sarubbo <ago@gentoo.org> boost-build-1.52.0-r1.ebuild:
  Stable for ppc64, wrt bug #455464

  22 Sep 2013; Agostino Sarubbo <ago@gentoo.org> boost-build-1.52.0-r1.ebuild:
  Stable for ia64, wrt bug #455464

  22 Sep 2013; Agostino Sarubbo <ago@gentoo.org> boost-build-1.52.0-r1.ebuild:
  Stable for x86, wrt bug #455464

  14 Sep 2013; Agostino Sarubbo <ago@gentoo.org> boost-build-1.52.0-r1.ebuild:
  Stable for amd64, wrt bug #455464

*boost-build-1.54.0 (27 Aug 2013)

  27 Aug 2013; Sergey Popov <pinkbyte@gentoo.org> +boost-build-1.54.0.ebuild,
  +files/boost-build-1.54.0-fix-test.patch,
  +files/boost-build-1.54.0-support_dots_in_python-buildid.patch:
  Version bump, wrt bug #475712

  25 Aug 2013; Jeroen Roovers <jer@gentoo.org> boost-build-1.52.0-r1.ebuild: