@@ -1,6 +1,11 @@
 # ChangeLog for dev-util/boost-build
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/boost-build/ChangeLog,v 1.126 2014/05/16 09:40:05 pinkbyte Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/boost-build/ChangeLog,v 1.127 2014/08/10 21:25:43 slyfox Exp $
+
+  10 Aug 2014; Sergei Trofimovich <slyfox@gentoo.org>
+  boost-build-1.52.0-r1.ebuild, boost-build-1.53.0.ebuild,
+  boost-build-1.54.0.ebuild, boost-build-1.55.0.ebuild:
+  QA: drop trailing '.' from DESCRIPTION
 
   16 May 2014; Sergey Popov <pinkbyte@gentoo.org> boost-build-1.53.0.ebuild,
   boost-build-1.54.0.ebuild, boost-build-1.55.0.ebuild:
